--- a/.github/workflows/notion-douban-sync.yml
+++ b/.github/workflows/notion-douban-sync.yml
@@ -10,7 +10,7 @@ on:
   pull_request:
     branches: [ "master" ]
   schedule:
-    - cron: '40 0,12 * * *'
+    - cron: '0 */1 * * *'
 
 permissions:
   contents: read
